Update project files

--- a/login_page/src/components/ForgotPassword.css
+++ b/login_page/src/components/ForgotPassword.css
@@ -68,16 +68,19 @@
   transition: background 0.2s, transform 0.2s;
 }
 
-.forgot-password-submit:hover,
-.forgot-password-signin:hover {
+.forgot-password-submit:hover {
   background: #009624;
   transform: scale(1.03);
 }
 
-/* Specific style to keep Sign In aligned like Submit */
+
 .forgot-password-signin {
   background: #0769DC;
 ; /* same green */
+}
+.forgot-password-signin:hover{
+  background: #0769DC ;
+  transform: scale(1.03);
 }
 
 /* Responsive tweaks */
