--- a/login_page/src/components/SignupFrom.css
+++ b/login_page/src/components/SignupFrom.css
@@ -44,20 +44,18 @@
 
 /* Input fields */
 .input-field {
-    width: 70%; /* changed from 100% */
+    width: 70%; 
     height: 73px;
     padding: 16px;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
-    /* border: 1px solid #ccc; */
+
     background-color: white;
-    margin: 0 auto 20px auto; /* center the field */
-    display: block; /* required to center with margin: auto */
+    margin: 0 auto 20px auto; 
+    display: block; 
     box-sizing: border-box;
   }
   
-
-/* Signup button */
 .signup-button {
   width: 321px;
   height: 71px;
